micro-svc/hehe-demo-master/chapter-files/traffic-management/vs-recommendation-fault-abort.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation-route
spec:
  hosts:
  - recommendation
  http:
  - fault:
      abort:
        httpStatus: 500
        percent: 100
    route:
    - destination:
        host: recommendation
        subset: v1
